--- a/2022RapidReactCode/2022RapidRobotBuilder.yaml
+++ b/2022RapidReactCode/2022RapidRobotBuilder.yaml
@@ -21,16 +21,6 @@ Children:
           value: '0'
       Base: PowerDistribution
       Name: PDH
-    - Children: []
-      Properties:
-        Input Channel (Analog): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id001 ['0', '1', '2', '3', '4', '5', '6', '7']
-          default: '0'
-          name: Input Channel (Analog)
-          validators: &id002 [AnalogInput]
-          value: '2'
-      Base: Analog Input
-      Name: mainDistanceOutSensor
     Properties:
       Send to SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: false,
         name: Send to SmartDashboard, validators: null, value: false}
@@ -45,42 +35,32 @@ Children:
         default: []
         name: Constants
         validators: null
-        value: &id003 []
+        value: &id001 []
     Base: Subsystem
     Name: Other
   - Children:
     - Children: []
       Properties:
         Input Channel (Analog): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
+          choices: ['0', '1', '2', '3', '4', '5', '6', '7']
           default: '0'
           name: Input Channel (Analog)
-          validators: *id002
+          validators: [AnalogInput]
           value: '0'
       Base: Analog Input
       Name: beltBottomSensor
     - Children: []
       Properties:
         CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id004 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
+          choices: &id002 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
             '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22',
             '23', '24', '25', '26', '27', '28', '29', '30', '31']
           default: '2'
           name: CAN ID
-          validators: &id005 [CANID]
+          validators: &id003 [CANID]
           value: '6'
       Base: Victor SPX
       Name: Victor SPX Belt
-    - Children: []
-      Properties:
-        Input Channel (Analog): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
-          default: '0'
-          name: Input Channel (Analog)
-          validators: *id002
-          value: '1'
-      Base: Analog Input
-      Name: beltTopSensor
     Properties:
       Send to SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: false,
         name: Send to SmartDashboard, validators: null, value: false}
@@ -95,7 +75,7 @@ Children:
         default: []
         name: Constants
         validators: null
-        value: *id003
+        value: *id001
     Base: Subsystem
     Name: Belt
   - Children:
@@ -104,22 +84,22 @@ Children:
         - Children: []
           Properties:
             CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-              choices: &id006 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
+              choices: &id004 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
                 '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21',
                 '22', '23', '24', '25', '26', '27', '28', '29', '30', '31']
               default: '2'
               name: CAN ID
-              validators: &id007 [CANID]
+              validators: &id005 [CANID]
               value: '4'
           Base: Talon SRX
           Name: Talon SRX L
         - Children: []
           Properties:
             CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id004
+              choices: *id002
               default: '2'
               name: CAN ID
-              validators: *id005
+              validators: *id003
               value: '5'
           Base: Victor SPX
           Name: Victor SPX L
@@ -128,13 +108,13 @@ Children:
             default: 1
             name: MotorController2
             type: PIDOutput
-            validators: &id008 [MotorControllerGroup, ChildDropdownSelected]
+            validators: &id006 [MotorControllerGroup, ChildDropdownSelected]
             value: Victor SPX L
           MotorController1: !!robotbuilder.data.properties.ChildSelectionProperty
             default: 0
             name: MotorController1
             type: PIDOutput
-            validators: &id009 [MotorControllerGroup, ChildDropdownSelected]
+            validators: &id007 [MotorControllerGroup, ChildDropdownSelected]
             value: Talon SRX L
           MotorController4: !!robotbuilder.data.properties.ChildSelectionProperty {
             default: null, name: MotorController4, type: PIDOutput, validators: null,
@@ -148,20 +128,20 @@ Children:
         - Children: []
           Properties:
             CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id006
+              choices: *id004
               default: '2'
               name: CAN ID
-              validators: *id007
+              validators: *id005
               value: '2'
           Base: Talon SRX
           Name: Talon SRX R
         - Children: []
           Properties:
             CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id004
+              choices: *id002
               default: '2'
               name: CAN ID
-              validators: *id005
+              validators: *id003
               value: '3'
           Base: Victor SPX
           Name: Victor SPX R
@@ -170,13 +150,13 @@ Children:
             default: 1
             name: MotorController2
             type: PIDOutput
-            validators: *id008
+            validators: *id006
             value: Victor SPX R
           MotorController1: !!robotbuilder.data.properties.ChildSelectionProperty
             default: 0
             name: MotorController1
             type: PIDOutput
-            validators: *id009
+            validators: *id007
             value: Talon SRX R
           MotorController4: !!robotbuilder.data.properties.ChildSelectionProperty {
             default: null, name: MotorController4, type: PIDOutput, validators: null,
@@ -207,42 +187,6 @@ Children:
           name: Safety Enabled, validators: null, value: true}
       Base: Differential Drive
       Name: driveMain
-    - Children: []
-      Properties:
-        Channel A Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
-            '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
-            '24', '25']
-          default: '0'
-          name: Channel A Channel (Digital)
-          validators: [DigitalChannel]
-          value: '0'
-        Distance Per Pulse: !!robotbuilder.data.properties.DoubleProperty {default: 1,
-          name: Distance Per Pulse, validators: null, value: 1.0}
-        PID Source: !!robotbuilder.data.properties.ChoicesProperty
-          choices: [kDisplacement, kRate]
-          default: kRate
-          name: PID Source
-          validators: null
-          value: kRate
-        Encoding Type: !!robotbuilder.data.properties.ChoicesProperty
-          choices: [k4X, k2X, k1X]
-          default: k4X
-          name: Encoding Type
-          validators: null
-          value: k4X
-        Reverse Direction: !!robotbuilder.data.properties.BooleanProperty {default: false,
-          name: Reverse Direction, validators: null, value: false}
-        Channel B Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
-          choices: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
-            '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
-            '24', '25']
-          default: '0'
-          name: Channel B Channel (Digital)
-          validators: [DigitalChannel]
-          value: '1'
-      Base: Quadrature Encoder
-      Name: shaftEncoderRight
     Properties:
       Send to SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: false,
         name: Send to SmartDashboard, validators: null, value: false}
@@ -257,29 +201,29 @@ Children:
         default: []
         name: Constants
         validators: null
-        value: *id003
+        value: *id001
     Base: Subsystem
     Name: Drive
   - Children:
     - Children: []
       Properties:
         CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id010 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
+          choices: &id008 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
             '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22',
             '23', '24', '25', '26', '27', '28', '29', '30', '31']
           default: '2'
           name: CAN ID
-          validators: &id011 [CANID]
+          validators: &id009 [CANID]
           value: '0'
       Base: Talon FX
       Name: Talon FX flywheel1
     - Children: []
       Properties:
         CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id010
+          choices: *id008
           default: '2'
           name: CAN ID
-          validators: *id011
+          validators: *id009
           value: '1'
       Base: Talon FX
       Name: Talon FX flywheel2
@@ -297,20 +241,32 @@ Children:
         default: []
         name: Constants
         validators: null
-        value: *id003
+        value: *id001
     Base: Subsystem
     Name: Flywheel
   - Children:
     - Children: []
       Properties:
         CAN ID: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id004
+          choices: *id002
           default: '2'
           name: CAN ID
-          validators: *id005
+          validators: *id003
           value: '7'
       Base: Victor SPX
       Name: Victor SPX Intake
+    - Children: []
+      Properties:
+        Input Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+            '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
+            '24', '25']
+          default: '0'
+          name: Input Channel (Digital)
+          validators: [DigitalChannel]
+          value: '0'
+      Base: Limit Switch
+      Name: posOneLimit
     Properties:
       Send to SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: false,
         name: Send to SmartDashboard, validators: null, value: false}
@@ -345,7 +301,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id012 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+          choices: &id010 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
             '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
             '24', '25', '26', '27', '28', '29', '30', '31', '32']
           default: '1'
@@ -356,14 +312,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: &id013 [TypeDropdownSelected]
+          validators: &id011 [TypeDropdownSelected]
           value: BeltUpCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id014 [whenPressed, whenReleased, whileHeld, whenHeld, toggleWhenPressed,
+          choices: &id012 [whenPressed, whenReleased, whileHeld, whenHeld, toggleWhenPressed,
             cancelWhenPressed]
           default: whenPressed
           name: When to Run
@@ -383,7 +339,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id012
+          choices: *id010
           default: '1'
           name: Button
           validators: null
@@ -392,14 +348,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id013
+          validators: *id011
           value: BeltDownCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id014
+          choices: *id012
           default: whenPressed
           name: When to Run
           validators: null
@@ -418,7 +374,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id012
+          choices: *id010
           default: '1'
           name: Button
           validators: null
@@ -427,14 +383,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id013
+          validators: *id011
           value: FlywheelOutCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id014
+          choices: *id012
           default: whenPressed
           name: When to Run
           validators: null
@@ -453,7 +409,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id012
+          choices: *id010
           default: '1'
           name: Button
           validators: null
@@ -462,14 +418,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id013
+          validators: *id011
           value: FlywheelInCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id014
+          choices: *id012
           default: whenPressed
           name: When to Run
           validators: null
@@ -488,7 +444,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id012
+          choices: *id010
           default: '1'
           name: Button
           validators: null
@@ -497,14 +453,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id013
+          validators: *id011
           value: IntakeInCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id014
+          choices: *id012
           default: whenPressed
           name: When to Run
           validators: null
@@ -523,7 +479,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id012
+          choices: *id010
           default: '1'
           name: Button
           validators: null
@@ -532,14 +488,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id013
+          validators: *id011
           value: IntakeOutCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id014
+          choices: *id012
           default: whenPressed
           name: When to Run
           validators: null
@@ -745,6 +701,28 @@ Children:
         name: Button on SmartDashboard, validators: null, value: true}
     Base: Command
     Name: DriveArcade
+  - Children: []
+    Properties:
+      Autonomous Selection: !!robotbuilder.data.properties.BooleanProperty {default: false,
+        name: Autonomous Selection, validators: null, value: false}
+      Parameters: !!robotbuilder.data.properties.ParametersProperty
+        default: []
+        name: Parameters
+        validators: null
+        value: []
+      Run When Disabled: !!robotbuilder.data.properties.BooleanProperty {default: false,
+        name: Run When Disabled, validators: null, value: false}
+      Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
+        name: Requires, type: Subsystem, validators: null, value: Belt}
+      Parameter presets: !!robotbuilder.data.properties.ParameterSetProperty
+        default: &id013 []
+        name: Parameter presets
+        validators: null
+        value: *id013
+      Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
+        name: Button on SmartDashboard, validators: null, value: true}
+    Base: Sequential Command Group
+    Name: Sequential Command Group 1
   Properties: {}
   Base: Commands
   Name: Commands
